# NovelPilot

./: .gitignore  AGENTS.md  README.md  SPEC.MD  alembic.ini  harness-design-principles.md  package.json  pyproject.toml  writing-flow-design.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py  profiles.py
backend/tests/: test_acceptance_report.py  test_agent_domain_tools.py  test_agent_evaluator.py  test_agent_events.py  test_agent_recovery.py  test_agent_repair_workspace.py  test_agent_runtime.py  test_agent_semantic_repair.py  test_artifacts.py  test_atomic_files.py  test_book_revisions.py  test_completion_api.py  test_completion_audit.py  test_database_engine.py  test_events.py  test_evidence_matching.py  test_experiment_fixtures.py  test_experiment_hooks.py  test_experiment_runs.py  test_export.py  test_failure_coverage.py  test_feedback.py  test_happy_path.py  test_json_files.py  test_live_observation_series.py  test_live_project_acceptance.py  test_live_provider_smoke.py  (+17 more)
docs/: README.md  acceptance-traceability.md  agent-stability-follow-ups.md  architecture.md  benchmark-story-prompt.md  harness-design-principles.md  local-usage.md  ux-follow-ups.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vitest.config.ts
scripts/: acceptance_report.py  audit_output_secrets.py  audit_runtime_secrets.py  completion_audit.py  configure_llm_profile.py  database_admin.py  live_book_observation_series.py  live_project_acceptance.py  live_provider_smoke.py  migrate_profile_config.py  python.cmd  record_literary_review.py  test_llm_profile.py
(+316 files in other folders)
