[project]
name = "novelpilot"
version = "0.1.0"
description = "Local three-layer Agent Loop Harness for long-form AI novel writing."
requires-python = ">=3.13"
dependencies = [
  "aiosqlite==0.22.1",
  "alembic==1.18.5",
  "fastapi>=0.139.0",
  "httpx==0.28.1",
  "openai>=2.46.0,<3.0.0",
  "pydantic>=2.13.0",
  "pydantic-ai-slim[openai,retries]==2.15.0",
  "sqlalchemy[asyncio]==2.0.51",
  "tenacity==9.1.4",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.1.0",
  "ruff>=0.14.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "backend"
exclude = ["backend/tests/"]
